# ai

./: .editorconfig  .envrc  .gitignore  .mcp.json  .prettierrc  AGENTS.md  CLAUDE.md  Dockerfile.claude  README.md  Taskfile.dist.yaml  docker-compose.yaml  dprint.json  example.env  mise.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: backend-api.md  devops.md  frontend.md  mentor.md  performance-optimizer.md  qa-detective.md  refactoring-specialist.md  root-cause-analyst.md  scribe.md  security-threat-analyst.md  systems-architect.md
.claude/commands/: cook.md  feedback.md  fix.md  optimize.md
.github/workflows/: claude-auto-review.yaml  publish-claude.yaml
.opencode/: opencode.json
.taskfiles/: agents.yaml  command.yaml  commands.yaml  github.yaml  hooks.yaml  mcp.yaml  notify.yaml  plugin.yaml  promptflow.yaml  python.yaml  scripts.yaml  setup.yaml  transcribe-ffmpeg.yaml  transcribe.yaml
commands/: task-todo.md
docs/: agents.md  claude.md  hooks.md  mcp.md  prompts.md  workflow.md
promptflow/weather/: chat.prompty  data.jsonl  flow.py  run.yaml  tools.json
scripts/: entrypoint.sh  github-activity.sh  pushover.sh
transcribe/: README.md  pyproject.toml  run_tests.py
transcribe/src/: transcribe.py
transcribe/tests/: conftest.py  test_basic.py  test_integration.py  test_transcribe.py
transcribe_ffmpeg/: README.md  pyproject.toml
transcribe_ffmpeg/src/: transcribe_main.py
transcribe_ffmpeg/tests/: conftest.py  test_basic.py  test_transcribe.py
user/: CLAUDE.md
