[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe"
version = "0.0.1"
description = "Transcribe with FFMPEG and OpenAI Whisper"
authors = [
  { name = "Brett", email = "20871604+brettinternet@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "setuptools",
  "pyaudio",
  "SpeechRecognition", 
  "torch",
  "numpy",
  "openai-whisper @ git+https://github.com/openai/whisper.git",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
]

[project.scripts]
transcribe = "transcribe:main"

[tool.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu116"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--cov=src", "--cov-report=html", "--cov-report=term-missing"]
