[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe-ffmpeg"
version = "0.1.0"
description = "Real-time audio transcription using FFmpeg 8+ with Whisper support"
authors = [
  { name = "Brett", email = "20871604+brettinternet@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
]

[project.scripts]
transcribe-ffmpeg = "transcribe_main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--cov=src", "--cov-report=html", "--cov-report=term-missing"]